Update auf Java 17 / Aktualisierung Plugins / Aktualisierung junit, mysql-connector